<resources>
    <string name="app_name">Tourist attraction tagger</string>
    <string name="adminLoginText">Administrator Login</string>
    <string name="adminUsername">Enter admin username</string>
    <string name="adminPassword">Enter admin password</string>
    <string name="helpButtonText">Help</string>
    <string name="loginButtonText">Login</string>
    <string name="normalLoginButtonText">Guest Login / Normal user login</string>
    <string name="name">Enter your name</string>
    <string name="addPlaces">Add places</string>
    <string name="add">Add</string>
    <string name="show_friends_places">Show friends\' places</string>
    <string name="edit_my_place">Edit my places</string>
    <string name="goToLoginScreen">Go to login screen</string>
    <string name="addCityText">Add a new city</string>
    <string name="notification">Logged in as an administrator</string>
    <string name="addCity">Add City</string>
    <string name="pictureName">Enter the name of the picture:</string>
    <string name="countryName">Enter the country name:</string>
    <string name="cityName">Enter the city name:</string>
    <string name="sameCityException">Cannot add the same city twice!</string>
    <string name="removeCity">Remove a city</string>
    <string name="rmCityName">Enter the name of the city</string>
    <string name="removeButtonText">Remove the city</string>
    <string name="addVenue">Add new venue</string>
    <string name="removeVenue">Remove a venue</string>
    <string name="addAttraction">Add tourist attraction</string>
    <string name="typesOfAttractions">Bar/Restaurant/Museum/Theater</string>
    <string name="addAttractionNameET">Enter the name:</string>
    <string name="addAttractionLocationET">Enter street name and number:</string>
    <string name="wrongUsernameОrPasswordPrompt">Wrong username or password!</string>
    <string name="adminUserAndPass">username: admin, password: admin</string>
    <string name="enterNamePrompt">Please enter your name.</string>
    <string name="locationDisplay">%s is in %s</string>
    <string name="locationShower">%s was in %s</string>
    <string name="cityRemove">Remove city</string>
    <string name="cityNamePrompt">Enter the name of the city</string>
    <string name="rmvPrompt">Remove</string>
    <string name="notifRemoveSuccess">City removed successfully.</string>
    <string name="notifUnexistingCity">This city does not exist</string>
    <string name="notifInvalidCity">Invalid city name!</string>
    <string name="cancel">Cancel</string>
    <string name="notifCannotAddCity">Invalid information! City cannot be added.</string>
    <string name="notifCityAdded">City added successfully. Press the back button to exit.</string>
    <string name="notifAttrAdded">Attraction added successfully!</string>
    <string name="notValidAttraction">Not a valid tourist attraction!</string>
    <string name="specialCocktail">Special cocktail:</string>
    <string name="specialDish">Special dish:</string>
    <string name="exhibition">Exhibition:</string>
    <string name="play">Play:</string>
    <string name="notifWronAttr">Wrong type of attraction</string>
    <string name="notifRMTourAttr">Remove a tourist attraction</string>
    <string name="enterTourAttrName">Enter the name of the attraction</string>
    <string name="notifTourAttrAdded">Tourist attraction removed successfully</string>
    <string name="notifTourAttrNotFound">Tourist attraction does not exist!</string>
    <string name="notifWrongTourAttrName">Invalid tourist attraction name!</string>
    <string name="wrongTypeAttr">Wrong type of attraction!</string>
    <string name="backButtonPrompt">Press the back button when ready!</string>
    <string name="editCity">Edit a city</string>
    <string name="editCityMsg">Enter the name of the city you want to edit.</string>
    <string name="edit">Edit</string>
    <string name="invalidInfo">Invalid information</string>
</resources>
